# Interaction-Calculus

./: .gitignore  CLAUDE.md  Cargo.toml  HVM-Nano.md  IC.md  InteractionCalculus.md  Makefile  OPTIMIZATIONS.md  README.md  example.ic  ic.md  main.prompt  suptt.md  suptt.prompt  test.ic  test.suptt
book/: test_0.ic  test_1.ic  test_2.ic  test_3.ic  test_4.ic  test_5.ic
examples/: basic.icvm  neg_fusion.icvm  test_0.ic  test_1.ic  test_5.ic  tree_alloc.icvm  tree_alloc.ivm
haskell/: main.hs  main_debug.hs  modern_version.hs
src/: alloc_term.c  check.rs  collapse.c  collapse.h  example.rs  extra.rs  hvmn.c  hvmn.cu  hvmn.h  hvmn_metal.mm  ic.c  ic.cu  ic.h  ic.metal  ic_metal.mm  inet.rs  init_parser.c  lib.rs  main.c  main.rs  memory.c  memory.h  net.rs  normal.c  normal.h  parse.c  parse.h  parse_term_alloc.c  show.c  show.h  store_term.c  term.rs  test.rs  types.h  whnf.c  whnf.h
src/inet/: core.rs  equal.rs  mod.rs  syntax.rs
src/interactions/: app_lam.c  app_sup.c  col_b_0.c  col_b_1.c  col_lam.c  col_nil.c  col_sup.c  col_tup.c  get_sup.c  get_tup.c  interactions.h  ite_b0.c  ite_b1.c  ite_b_0.c  ite_b_1.c  ite_sup.c  let_red.c  other_rules.c  rwt_rfl.c  rwt_sup.c  use_nil.c  use_sup.c
src/parse/: add_var_binding.c  add_var_use.c  alloc_term.c  check_utf8.c  consume.c  error.c  expect.c  init_parser.c  lookup_var_binding.c  name.c  next_char.c  peek_char.c  peek_is.c  resolve_var_uses.c  store_term.c  string.c  term.c  term_alloc.c  uint.c  whitespace.c
src/term/: as_net.rs  convert.rs  definition_book.rs  mod.rs  syntax.rs  views.rs
suptt/: Makefile
(+50 files in other folders)
