[package]
name = "interaction-calculus"
version = "0.2.5"
description = "A parallel model of computation."
license = "MIT"
authors = ["Victor Maia <victor.taelin@gmail.com>"]
repository = "https://github.com/victortaelin/interaction-calculus"

[lib]
name = "ic"
path = "src/lib.rs"

[dependencies]
clap = "2.26.0"
# im = "15.1.0"
itertools = "0.10.5"

[[bin]]
name = "ic"
path = "src/main.rs"
