[package]
name = "interaction-calculus"
version = "0.2.5"
description = "A parallel model of computation."
license = "MIT"
authors = ["Victor Maia <victor.taelin@gmail.com>"]
repository = "https://github.com/victortaelin/interaction-calculus"

[lib]
name = "itt"
path = "src/lib.rs"

[dependencies]
clap = "2.26.0"
im = "15.1.0"

[[bin]]
name = "itt"
path = "src/main.rs"
